# grpo.cpp

./: CMakeLists.txt  README.md
apps/: 00_grpo_loss_cpu.cpp
include/grpo/: cuda_utils.cuh  grpo_loss.hpp
labs/: 00_vector_add.cu  01_reduce_sum.cu
src/cpu/: grpo_loss.cpp
tests/: test_grpo_loss.cpp
